<resources>
    <string name="app_name">탭메모</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="category_all">전체</string>
    <string name="category_nonSorted">미분류</string>
    <string name="category_locked">잠금</string>
    <string name="memoTitle_deleteTitle">삭제</string>
    <string name="memoTitle_confirmModified">완료</string>
    <string name="hint_categoryHint">카테고리이름</string>
    <string name="hint_memoTitle">제목없음</string>
    <string name="goToMarketButtonString">리뷰 및 버그제보</string>
    <string name="informationDialogConfirm">확인</string>
    <string name="information">"김현우\n양미란\n이다원\n조영호"</string>
    <string name="apptive">앱티브</string>
    <string name="maker">만든이</string>
    <string name="deleteConfirmMessage">삭제하시겠습니까?</string>
    <string name="complete">완료</string>
    <string name="delete">삭제</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
</resources>
