<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@drawable/dialog_new"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true">

	<TextView
			android:lines="1"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="20dp"
			android:layout_width="200dp"
			android:layout_gravity="center"
			android:layout_height="wrap_content"
			android:background="@null"
			android:gravity="start"
			android:maxLines="1"
			android:textColor="@android:color/black"
			android:textSize="18dp"
			android:text="@string/deleteConfirmMessage"
			android:textAlignment="center"/>

	<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal"
			android:weightSum="1">

		<Button
				android:id="@+id/deleteConfirmButton"
				android:layout_width="0dp"
				android:layout_weight="0.5"
				android:layout_height="match_parent"
				android:background="@drawable/dialog_complete"
				android:textColor="#ffffff"
				android:textSize = "20sp"
				android:text="@string/confirm" />

		<Button
				android:id="@+id/deleteCancelButton"
				android:layout_width="0dp"
				android:layout_weight="0.5"
				android:layout_height="match_parent"
				android:background="@drawable/dialog_delete"
				android:textColor="#8a8a8a"
				android:textSize = "20sp"
				android:text="@string/cancel" />
	</LinearLayout>
</LinearLayout>
