<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
							android:layout_width="300dp"
							android:layout_height="wrap_content"
							android:orientation="vertical"
							android:background="@drawable/dialog_new"
							android:layout_alignParentTop="true"
							android:layout_centerHorizontal="true">
	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:layout_gravity="center"
			android:layout_marginTop="15dp"
			android:layout_marginBottom="15dp">

		<TextView
				android:layout_width="wrap_content"
				android:layout_gravity="center"
				android:layout_height="wrap_content"
				android:layout_marginBottom="5dp"
				android:background="@null"
				android:gravity="center"
				android:textColor="#2696a1"
				android:textSize="13dp"
				android:text="@string/maker"/>

		<TextView
				android:layout_width="wrap_content"
				android:layout_gravity="center"
				android:layout_height="wrap_content"
				android:background="@null"
				android:gravity="center"
				android:textColor="#516768"
				android:textSize="13dp"
				android:text="@string/information"
				android:lineSpacingExtra="3dp"/>

	</LinearLayout>

	<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal"
			android:weightSum="1">

		<Button
				android:id="@+id/goToMarketButton"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="match_parent"
				android:background="@drawable/dialog_complete"
				android:textColor="#ffffff"
				android:textSize = "15sp"
				android:text="@string/goToMarketButtonString" />
	</LinearLayout>
</LinearLayout>